<resources>
    <string name="main_text1">Did you know that...?</string>
    <string name="app_name">Green</string>
    <string name="main_button1">More green facts !</string>
    <string name="main_button2">Pick a category !</string>
    <string name="main_text2">Want more?</string>
    <string name="Combitech">by Combitech  </string>
    <string name="categories_text1">Pick !</string>
    <string name="categories_button1">Food</string>
    <string name="categories_button2">Energy</string>
    <string name="categories_button3">Quizzes</string>
    <string name="categories_button4">Resources</string>
    <string name="categories_button5">Combitech</string>
    <string name="food_text0">Eating vegetarian/vegan to help the environment</string>
    <string name="food_text1">According to a 2006 United Nations initiative, the livestock industry is one of the largest contributors to environmental degradation worldwide, and modern practices of raising animals for food contributes on a "massive scale" to deforestation, air and water pollution, land degradation, loss of topsoil, climate change, the overuse of resources including oil and water, and loss of biodiversity. The initiative concluded that "<b>the livestock sector emerges as one of the top two or three most significant contributors to the most serious environmental problems, at every scale from local to global</b>." <b>In 2006, FAO estimated that meat industry contributes 18% of all emissions of greenhouse gases. This figure was revised in 2009 by two World Bank scientists and estimated at 51% minimum.</b>
In a world of diminishing safe water supplies it is worth bearing in mind that animals fed on grain need much more water than grain crops. In tracking food animal production from the feed through to the dinner table, the inefficiencies of meat, milk and egg production range from a 4:1 energy input to protein output ratio up to 54:1.The result is that producing animal-based food is typically much less efficient than the direct harvesting of grains, vegetables, legumes, seeds and fruits for human consumption. A person existing chiefly on animal protein requires 10 times more land to provide adequate food than someone living on vegetable sources of protein.
<b>Choosing to eat vegetarian/vegan is a good way to work everyday toward a more sustainable world.</b></string>
    <string name="food_text2">You can find below a list of yummy vegetarian/vegan restaurants and stores in your area.</string>
    <string name="food_button1">Access the list</string>
    <string name="location_pop_text1">Set your location:</string>
    <string name="location_pop_button1">Done!</string>
    <string name="location_pop_countries_prompt">Choose a country:</string>
    <string name="location_pop_cities_prompt">Choose a city:</string>
    <string name="resources_text1">Here you can find books and movies treating of various green themes, from economics, to energy, philosophy and even beauty!</string>
    <string name="resources_button1">To the list!</string>
    <string name="resources_button2">Movies</string>
    <string name="quizzes_text0"><b>Green Quizzes</b></string>
    <string name="quizzes_text1">Test your green know-how and learn how to shrink your environmental footprint on the planet!</string>
    <string name="quizzes_button1">To the quizzes!</string>
    <string name="energy_text0"><b>What\'s a carbon footprint?</b></string>
    <string name="energy_text1">A carbon footprint is "the total set of greenhouse gas (GHG) emissions caused by an organization, event, product or person."It is often expressed in terms of the amount of carbon dioxide, or its equivalent of other GHGs, emitted. 
Calculating your carbon footprint is a good way to get a better grasp on the effects of our everyday life on the atmosphere.
Press the button below to get an assessment of your carbon footprint, or if you\'re looking for ideas to reduce your impact on the environment, go directly to <i>Offset your carbon footprint</i>.
    </string>
    <string name="energy_button1">Calculate your carbon footprint</string>
    <string name="energy_button2">Offset your carbon footprint</string>
    <string name="energycarbonhouse_intro"><b>Household</b></string>
    <string name="energycarbonhouse_info"><i>To calculate your full household footprint, indicate 1 person in household.</i></string>
    <string name="energycarbonhouse_nb"><b>People in your household</b></string>
    <string name="energycarbonhouse_electricity"><b>Electricity</b></string>
    <string name="energycarbonhouse_naturalgas"><b>Natural Gas</b></string>
    <string name="energycarbonhouse_heatingoil"><b>Heating oil</b></string>
    <string name="energycarbonhouse_coal"><b>Coal</b></string>
    <string name="energycarbonhouse_lpg"><b>LPG</b></string>
    <string name="energycarbonhouse_propane"><b>Propane</b></string>
    <string name="energycarbonhouse_pellets"><b>Wooden Pellets</b></string>
    <string name="energycarbonhouse_calculate">Calculate and save to results</string>
    <string name="energycarbonhouse_next">Next</string>
    <string name="energycarbonflights_intro"><b>Air transportation</b> </string>
    <string name="energycarbonflights_from"><b>From</b></string>
    <string name="energycarbonflights_button">Select an airport</string>
    <string name="energycarbonflights_viabutton">Select an airport (Optional)</string>
    <string name="energycarbonflights_to"><b>To</b></string>
    <string name="energycarbonflights_via"><b>Via</b></string>
    <string name="energycarbonflights_editText1"><b>Trips</b></string>
    <string name="energycarbonflights_button1">Calculate and save to results!</string>
    <string name="energycarbonflights_button2">Add a flight</string>
    <string name="energycarbonflights_button3">Next</string>
    <string name="energycarbonflights_class"><b>Class</b></string>
    <string name="energycarboncar_intro"><b>Personal Vehicles</b></string>
    <string name="energycarboncar_car"><b>Car</b></string>
    <string name="energycarboncar_motorbike"><b>Motorbike</b></string>
    <string name="energycarboncar_mileage"><b>Mileage</b></string>
    <string name="energycarboncar_efficiency"><b>Efficiency</b></string>
    <string name="energycarboncar_button1">Calculate and save to results</string>
    <string name="energycarboncar_button2">Next</string>
    <string name="energycarbonbus_intro"><b>Public transportation</b></string>
    <string name="energycarbonbus_bus"><b>Bus:</b></string>
    <string name="energycarbonbus_localtrain"><b>Local train:</b></string>
    <string name="energycarbonbus_train"><b>Long Distance Train:</b></string>
    <string name="energycarbonbus_tram"><b>Tram:</b></string>
    <string name="energycarbonbus_subway"><b>Subway:</b></string>
    <string name="energycarbonbus_taxi"><b>Taxi:</b></string>
    <string name="energycarbonbus_button1">Calculate and save to results</string>
    <string name="energycarbonbus_button2">Next</string>
    <string name="energycarbonsecond_intro"><b>Secondary carbon footprint</b></string>
    <string name="energycarbonsecond_food"><b>Food preferences</b></string>
    <string name="energycarbonsecond_organic"><b>Organic produce</b></string>
    <string name="energycarbonsecond_season"><b>In season food</b></string>
    <string name="energycarbonsecond_imported"><b>Imported food and goods</b></string>
    <string name="energycarbonsecond_fashion"><b>Fashion</b></string>
    <string name="energycarbonsecond_packaging"><b>Packaging</b></string>
    <string name="energycarbonsecond_furniture"><b>Furniture and electricals</b></string>
    <string name="energycarbonsecond_recycling"><b>Recycling</b></string>
    <string name="energycarbonsecond_recreation"><b>Recreation</b></string>
    <string name="energycarbonsecond_car"><b>Car manufacture</b></string>
    <string name="energycarbonsecond_finance"><b>Finance and other services</b></string>
    <string name="energycarbonsecond_button1">Calculate and save to results!</string>
    <string name="energycarbonsecond_button2">To results !</string>
    <string name="energycarbonresult_intro"><b>Your total carbon footprint</b></string>
    <string name="energycarbonresult_house"><b>House: </b></string>
    <string name="energycarbonresult_flights"><b>Flights: </b></string>
    <string name="energycarbonresult_car"><b>Personal Vehicles: </b></string>
    <string name="energycarbonresult_public"><b>Public Transportation: </b></string>
    <string name="energycarbonresult_second"><b>Secondary: </b></string>
    <string name="energycarbonresult_button1">Calculate another Carbon FootprintTo Offset</string>
    <string name="energycarbonresult_button2">To Offset</string>
	<string name="Combitech_of1">Environmental impact Assessment</string>
	<string name="Combitech_of11">Infrastructure</string>
	<string name="Combitech_of12">Licensed activities and measures</string>
	<string name="Combitech_of13">Environmental assessments of plans and programs</string>
	<string name="Combitech_of2">Environmental management organisation</string>
	<string name="Combitech_of21">Specialized services in environmental management in order to develop or implement environmental management systems.</string>
	<string name="Combitech_of3">Environmental coordination of infrastructure projects</string>
	<string name="Combitech_of31">Management of environmental requirements</string>
	<string name="Combitech_of32">Government contacts</string>
	<string name="Combitech_of33">Notifications and permits</string>
	<string name="Combitech_of34">Control and monitoring of contractors</string>
	<string name="Combitech_of4">Environmental Communication</string>
	<string name="Combitech_of41">Internal and external communication of environmental issues and environmental work</string>
	<string name="Combitech_of5">Environmental Education</string>
	<string name="Combitech_of51">Basic environmental courses</string>
	<string name="Combitech_of52">Tailor-made training courses</string>
	<string name="Combitech_of6">System security environment</string>
	<string name="Combitech_of61">Identification of substances and processes with negative environmental health impact</string>
	<string name="Combitech_of62">Measures to minimize the impact</string>
	<string name="Combitech_of7">Environmental inventory of buildings</string>
	<string name="Combitech_of71">Environmental and material inventory</string>
	<string name="Combitech_of72">Sampling and analysis</string>
	<string name="Combitech_of73">Demolition Plan</string>
	<string name="Combitech_of8">Contaminated land</string>
	<string name="Combitech_of81">Inventory and sampling</string>
	<string name="Combitech_of82">Risk classification and proposed actions</string>
	<string name="Combitech_comp1">Our environmental consultants combine extensive experience with expertise. Our competences include:</string>
	<string name="Combitech_comp2">Environmental missions related to infrastructure, urban planning and industry</string>
	<string name="Combitech_comp3">Environmental Impact Assessments (EIAs)</string>
	<string name="Combitech_comp4">Environmental law and planning processes related to urban planning</string>
	<string name="Combitech_comp5">Contaminated soils and bio-decontamination</string>
	<string name="Combitech_comp6">Noises and Vibrations</string>
	<string name="Combitech_comp7">Environmental inventory of buildings</string>
	<string name="Combitech_comp8">Ecotoxicology and marine biology</string>
	<string name="Combitech_comp9">Environmental Security Analysis</string>
	<string name="Combitech_comp10">Climate Reports</string>
	<string name="Combitech_comp11">Environmental management</string>
	<string name="Combitech_comp12">Sustainable procurement</string>
	<string name="Combitech_comp13">Environmental education</string>
	<string name="Combitech_comp14">Environmental communication</string>
</resources>