<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              	android:layout_width="fill_parent" 
              	android:layout_height="fill_parent" 
              	android:orientation="vertical"
              	android:background="#FFFFFF">
		<TextView 
				android:id="@+id/trademark" 
				android:gravity="right" 
				android:background="@drawable/combitech" 
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_alignParentTop="true"></TextView>
				<LinearLayout 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:orientation="vertical"
	              android:layout_marginBottom="35dip"
	              android:layout_marginTop="35dip">
              <ScrollView
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">		
	    		<LinearLayout 
    				android:layout_height="match_parent" 
    				android:layout_width="match_parent"
    				android:orientation="vertical">
    				<TextView 
		            	android:text="@string/Combitech_comp1" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="20dip"
						android:paddingTop="25dip"
						android:textStyle="bold"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp2" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp3" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp4" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		             	android:text="@string/Combitech_comp5" 
		             	android:layout_width="wrap_content" 
		             	android:layout_height="wrap_content"
		             	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		             	android:text="@string/Combitech_comp6" 
		             	android:layout_width="wrap_content" 
		             	android:layout_height="wrap_content"
		             	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		             	android:text="@string/Combitech_comp7" 
						android:textColor="#228B22"
						android:textSize="17dip"		             	
						android:layout_width="wrap_content" 
		             	android:layout_height="wrap_content"></TextView>
		            <TextView 
		             	android:text="@string/Combitech_comp8" 
						android:textColor="#228B22"
						android:textSize="17dip"
		             	android:layout_width="wrap_content" 
		             	android:layout_height="wrap_content"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp9" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp10" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp11" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp12" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp13" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>
		            <TextView 
		            	android:text="@string/Combitech_comp14" 
		            	android:layout_width="wrap_content" 
		            	android:layout_height="wrap_content"
		            	android:textColor="#228B22"
						android:textSize="17dip"></TextView>       
		        </LinearLayout>
		    </ScrollView>
    </LinearLayout>
	<TextView
			android:textStyle="italic" 
			android:textColor="#FFF5EE" 
			android:id="@+id/trademark" 
			android:gravity="right" 
			android:background="@drawable/pied_de_page" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:layout_alignParentBottom="true"></TextView>
</RelativeLayout> 