<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              	android:layout_width="fill_parent" 
              	android:layout_height="fill_parent" 
              	android:orientation="vertical"
              	android:background="#FFFFFF">
		<TextView 
				android:id="@+id/trademark" 
				android:gravity="right" 
				android:background="@drawable/combitech" 
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_alignParentTop="true"></TextView>
				<LinearLayout 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:orientation="vertical"
	              android:layout_marginBottom="35dip"
	              android:layout_marginTop="35dip">
              <ScrollView
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">		
	    		<LinearLayout 
    				android:layout_height="match_parent" 
    				android:layout_width="match_parent"
    				android:orientation="vertical">
	    			<LinearLayout 
		            	android:layout_height="wrap_content" 
		            	android:layout_width="match_parent" 
		            	android:orientation="vertical">
		                <TextView 
		                	android:layout_height="wrap_content" 
		                	android:text="@string/Combitech_of1" 
		                	android:layout_width="wrap_content" 
		                	android:textColor="#228B22"
							android:textSize="20dip"
							android:paddingTop="25dip"
							android:textStyle="bold"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of11" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of12" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of13" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                </LinearLayout>
		                <LinearLayout 
		                	android:orientation="vertical" 
		                	android:layout_height="wrap_content" 
		                	android:layout_width="match_parent">
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of2" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="20dip"
								android:paddingTop="25dip"
								android:textStyle="bold"></TextView>
		                    <TextView
								android:layout_height="wrap_content" 
								android:text="@string/Combitech_of21" 
								android:layout_width="wrap_content" 
								android:textColor="#228B22"
							android:textSize="17dip"></TextView>
		                </LinearLayout>
		                <LinearLayout 
							android:layout_height="wrap_content" 
							android:layout_width="match_parent" 
							android:orientation="vertical">
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of3" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="20dip"
								android:paddingTop="25dip"
								android:textStyle="bold"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of31" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of32" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of33" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of34" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                </LinearLayout>
		                <LinearLayout 
		                	android:layout_height="wrap_content" 
		                	android:layout_width="match_parent" 
		                	android:orientation="vertical">
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of4" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="20dip"
								android:paddingTop="25dip"
								android:textStyle="bold"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of41" 
		                    	android:layout_width="wrap_content"
								android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                </LinearLayout>
		                <LinearLayout 
		                	android:layout_height="wrap_content" 
		                	android:layout_width="match_parent" 
		                	android:orientation="vertical">
		                    <TextView 
		                    	android:layout_height="wrap_content"
								android:text="@string/Combitech_of5"
								android:layout_width="wrap_content" 
								android:textColor="#228B22"
								android:textSize="20dip"
								android:paddingTop="25dip"
								android:textStyle="bold"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of51" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of52" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                </LinearLayout>
		                <LinearLayout 
		                	android:layout_height="wrap_content" 
		                	android:layout_width="match_parent" 
		                	android:orientation="vertical">
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of6" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="20dip"
								android:paddingTop="25dip"
								android:textStyle="bold"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of61" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of62" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                </LinearLayout>
		                <LinearLayout 
		                	android:layout_height="wrap_content" 
		                	android:layout_width="match_parent"
							android:orientation="vertical">
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of7" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="20dip"
								android:paddingTop="25dip"
								android:textStyle="bold"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content"
								android:text="@string/Combitech_of71" 
								android:layout_width="wrap_content" 
								android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of72" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content"
								android:text="@string/Combitech_of73" 
								android:layout_width="wrap_content" 
								android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                </LinearLayout>
		                <LinearLayout 
							android:layout_height="wrap_content" 
							android:layout_width="match_parent" 
							android:orientation="vertical">
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of8" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="20dip"
								android:paddingTop="25dip"
								android:textStyle="bold"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content" 
		                    	android:text="@string/Combitech_of81" 
		                    	android:layout_width="wrap_content" 
		                    	android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                    <TextView 
		                    	android:layout_height="wrap_content"
								android:text="@string/Combitech_of82" 
								android:layout_width="wrap_content" 
								android:textColor="#228B22"
								android:textSize="17dip"></TextView>
		                </LinearLayout>
		            </LinearLayout>
		        </ScrollView>
    </LinearLayout>
	<TextView
			android:textStyle="italic" 
			android:textColor="#FFF5EE" 
			android:id="@+id/trademark" 
			android:gravity="right" 
			android:background="@drawable/pied_de_page" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:layout_alignParentBottom="true"></TextView>
</RelativeLayout> 