<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:id="@+id/popup_menu_root"
			  android:background="#000000">
			  <TextView 
   			  	android:layout_margin="5dip"
   		 		android:layout_width="fill_parent" 
   				android:layout_height="wrap_content" 
   				android:id="@+id/location_pop_intro" 
   				android:text="@string/location_pop_text1"
   				android:textSize="20dip"
   				android:textColor="#228B22" 
   				android:textStyle="bold"></TextView>
   			 <Spinner 
   			 	android:id="@+id/location_pop_spinner_country"
   			 	android:layout_height="wrap_content"
   			 	android:layout_width="fill_parent"
   			 	android:text="Country"
   			 	android:textSize="10dip"
   			 	android:drawSelectorOnTop="True"
   			 	android:prompt="@string/location_pop_countries_prompt"/>
   			<Spinner 
   			 	android:id="@+id/location_pop_spinner_city"
   			 	android:layout_height="wrap_content"
   			 	android:layout_width="fill_parent"
   			 	android:text="City"
   			 	android:textSize="10dip"
   			 	android:drawSelectorOnTop="True"
   			 	android:prompt="@string/location_pop_cities_prompt"/>
			  <LinearLayout 
			  		android:id="@+id/location_pop_linearLayout1" 
			  		android:layout_width="match_parent" 
			  		android:layout_height="wrap_content"
			  		android:gravity="center"
			  		android:orientation="vertical">
			      <Button 
			      	android:text="@string/location_pop_button1" 
			      	android:id="@+id/location_pop_done" 
			      	android:layout_width="wrap_content" 
			      	android:layout_height="wrap_content"
        			android:textStyle="bold" 
        			android:drawableRight="@drawable/light_bulb" 
        			android:textSize="10dip" 
        			android:textColor="#00FF7F"></Button>
			  </LinearLayout> 			
</LinearLayout>