<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              	android:layout_width="fill_parent" 
              	android:layout_height="fill_parent" 
              	android:orientation="vertical"
              	android:background="@drawable/green_earth">
		<TextView 
				android:id="@+id/trademark" 
				android:gravity="right" 
				android:background="@drawable/haut_de_page" 
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_alignParentTop="true"></TextView>
				<LinearLayout 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:orientation="vertical"
	              android:layout_marginBottom="35dip"
	              android:layout_marginTop="35dip">
              <ScrollView
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">		
	    		<LinearLayout 
    				android:layout_height="match_parent" 
    				android:layout_width="match_parent"
    				android:orientation="vertical">
			  		<TextView 
		   			  	android:layout_margin="12dip"
		   		 		android:layout_width="fill_parent" 
		   				android:layout_height="wrap_content" 
		   				android:id="@+id/food_titre" 
		   				android:text="@string/food_text0"
		   				android:textSize="25dip"
		   				android:textColor="#228B22" 
		   				android:textStyle="bold"></TextView>
		   			<TextView 
		   			  	android:layout_margin="12dip"
		   		 		android:layout_width="fill_parent" 
		   				android:layout_height="wrap_content" 
		   				android:id="@+id/food_intro" 
		   				android:text="@string/food_text1"
		   				android:textColor="#228B22"></TextView>
		   			<TextView 
		   			  	android:layout_margin="12dip"
		   		 		android:layout_width="fill_parent" 
		   				android:layout_height="wrap_content" 
		   				android:id="@+id/food_intro" 
		   				android:text="@string/food_text2"
		   				android:textColor="#228B22"></TextView>		
					  <Button 
					   	android:text="@string/food_button1" 
					   	android:id="@+id/food_list" 
					    android:layout_width="220dip" 
					    android:layout_height="50dip"
					    android:layout_margin="12dip" 
		        		android:textStyle="bold" 
		        		android:drawableRight="@drawable/beach_umbrella" 
		        		android:textSize="20dip" 
		        		android:textColor="#32CD32"
		        		android:layout_gravity="center"></Button>
		        </LinearLayout>
		    </ScrollView>
</LinearLayout>
<TextView
			android:textStyle="italic" 
			android:textColor="#FFF5EE" 
			android:id="@+id/trademark" 
			android:gravity="right" 
			android:background="@drawable/pied_de_page" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent"
			android:layout_alignParentBottom="true"></TextView>
</RelativeLayout> 